--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1066,7 +1066,20 @@ fieldset{
 	</div>
 
 	<div class="row-fluid">
-	    <div class="span12">		
+	    <div class="span12">
+	        <p>
+	            Interviewer: 
+				<select name="interviewer">
+				{% for opt in selections.interviewers %}
+				    <option></option>
+					<option
+					{% if record %}
+						{% if record.data.interviewer == opt %} selected="selected"{% endif %}
+					{% endif %}
+					>{{ opt }}</option>
+				{% endfor %}
+				</select>
+	        </p>
 	        <table>
 	            <tbody>
         	        <tr>
