--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1079,6 +1079,19 @@ fieldset{
 					>{{ opt }}</option>
 				{% endfor %}
 				</select>
+				{% if current_user.do_admin %}
+				{% if record %}{% if record.data.interview %}
+				<a class="btn btn-info" target="_blank" href="/interviews/{{ record.data.id }}/form">View interview admin form</a>
+                {% if record.data.interview.form_date %}
+                <a class="btn btn-info" target="_blank" href="/interviews/{{ record.data.id }}/plan.pdf">View / print action form</a>
+				{% endif %}
+                {% if record.data.interview.emailed_date %}
+                Action form emailed on {{ record.data.interview.emailed_date }}
+                {% else %}
+                <a class="btn btn-info" href="/interviews/{{ record.data.id }}/email">Email action form</a>
+				{% endif %}
+				{% endif %}{% endif %}
+				{% endif %}
 	        </p>
 	        <table>
 	            <tbody>
