--- a/portality/templates/leaps/interviews/plan.html
+++ b/portality/templates/leaps/interviews/plan.html
@@ -17,7 +17,7 @@ jQuery(document).ready(function() {
 
     <div class="row-fluid">
         <div class="span12">
-          <p>Interview action plan goes here</p>
+          <p>Interview action plan additional questions for interviewer to complete goes here</p>
         </div>
     </div>
     
