--- a/portality/templates/leaps/survey/complete.html
+++ b/portality/templates/leaps/survey/complete.html
@@ -8,9 +8,13 @@
 
 		<div class="row-fluid">
 		    <div class="span12">
-
-		        <p>Thank you very much for completing the interview form. Your input is greatly appreciated and will make your interview with 
-		        LEAPS staff quicker and easier.</p>
+						
+						<h3>Thanks for submitting your form</h3>
+						
+		        <p>Your input is greatly appreciated and will make your interview with 
+		        LEAPS staff quicker and easier. To find out more about what your LEAPS 
+		        interview will involve, have a look at the 
+		        <a href="https://leapsonline.org/schoolstudents/s6-blog/leaps-11-interview">LEAPS S6 - Blog</a>.</p>
 
 		        <p>Our staff will review the information you have provided, and may contact you if further details are required.</p>
 
