--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -331,12 +331,12 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
           Please have details of your qualifications, personal 
 	        interests, work experience, and possible University or College applications to hand before you start.
 	        You will also be asked about your eligibility - please view our 
-	        <a target="_blank" href="https://leapsonline.org/node/1602">What is LEAPS?</a> introduction to learn more.
+	        <a target="_blank" href="https://leapsonline.org/node/1602">What is LEAPS?</a> presentation to learn more.
 	        You can find out how we use and what we do with your personal data <a target="_blank" href="/policy">here</a>.</p>
 
-    			<p><strong>Do not close your browser whilst completing the survey.</strong> It is recommended that 
-    			you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
-	        <p>Only the students of <strong>participating schools</strong> can complete the survey.</p>
+			<p><strong>Do not close your browser whilst completing the survey.</strong> It is recommended that 
+			you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
+	        <p>Only the students of <a target="_blank" href="https://www.leapsonline.org/about/our-schools">participating schools</a> can complete the survey.</p>
 	        <p>Some fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if 
 	        one is presented, otherwise continue to type and your text will be accepted.</p>
 	        <p>If you need to <strong>insert extra rows</strong>, press <strong>add</strong> to get another row. 
@@ -897,6 +897,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	<div class="row" style="margin-top:30px;">
 	    <div class="col-sm-12">
         	<p><input id="triggersave" class="btn btn-success btn-block" type="submit" name="submit" value="Submit your survey" /></p>
+        	<p>Please wait for the confirmation page to load after you hit the Submit Your Survey button. It may take a few moments. Thanks!</p>
 	    </div>
 	</div>
 
