--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -36,13 +36,15 @@
             <li>To inform you of information, activities and events that may support your interest in and transition to Further and Higher Education.</li>
             <li>To inform UCAS and Further and Higher Education Institutions in the UK and abroad of your engagement in the LEAPS programme.
             This includes your LEAPS eligibility status (if confirmed) being included on your UCAS application, for Higher Education Institutions to see.</li>
+            <li>To update Insight (the Scottish Government senior phase benchmarking tool) in relation to
+            your participation and attainment on the LEAPS Transitions Course (if participating).</li>
             <li>To undertake research, analysis and reporting to support the ongoing evaluation and development of the LEAPS programme.</li>
         </ul>
 
         <p>LEAPS uses external companies to process information about you in order to facilitate communications. We use
-        <a href="https://www.dotmailer.com/terms/privacy-policy/">Dotmailer</a>
+        <a href="https://dotdigital.com/terms/privacy-policy/">Dotdigital</a>
         and <a href="http://www.textanywhere.net/info-sec-policy.aspx">TextAnywhere</a>
-        to do this. You can unsubscribe from Dotmailer emails by clicking on the unsubscribe
+        to do this. You can unsubscribe from Dotdigital emails by clicking on the unsubscribe
         link at the foot of the email campaign. You can unsubscribe from TextAnywhere messages by texting the word STOP
         back by return.</p>
 
@@ -58,10 +60,12 @@
         <ul>
             <li>Your school.</li>
             <li>Further and Higher Education Institutions in the UK and abroad.</li>
+            <li>UCAS</li>
+            <li>Scottish Government</li>
+            <li>Local Authorities</li>
             <li>Organisations involved in co-delivering LEAPS events. (These organisations will be outlined when you register
             for LEAPS events, or as soon as possible thereafter).</li>
             <li>Skills Development Scotland.</li>
-            <li>UCAS</li>
         </ul>
 
         <p>We will hold the personal data you provided us for up to 3 years. After this time all identifiable personal data will be
