--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1088,7 +1088,9 @@ fieldset{
                 {% if record.data.interview.emailed_date %}
                 Action form emailed on {{ record.data.interview.emailed_date }}
                 {% else %}
-                <a class="btn btn-info" style="margin-top:-3px;" href="/interviews/{{ record.data.id }}/email">Email action form</a>
+                {% if record.data.interview.form_date %}
+                <a class="btn btn-info" style="margin-top:-3px;" href="/interviews/{{ record.data.id }}/email">Email action plan</a>
+`				{% endif %}
 				{% endif %}
 				{% endif %}{% endif %}
 				{% endif %}
